Back to top of page button and JS - https://tailwind-elements.com/snippets/tailwind/tailwindelements/3681385?view=side#js-tab-view and spacing fixes.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -16,3 +16,8 @@
 .has-tooltip:hover .tooltip {
     @apply visible z-50;
 }
+
+#btn-back-to-top {
+    position: fixed;
+    display: none;
+}
